--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:Pwntus/replicate-webhook-proxy.git",
-  "description": "",
+  "description": "Receive your Replicate webhook events through a websocket connection, right in your browser or Node.js code!",
   "author": "Pwntus <pontus.edvard@gmail.com>",
   "license": "MIT",
   "dependencies": {
